--- a/manifest.json
+++ b/manifest.json
@@ -50,12 +50,12 @@
     {
       "src": "https://res.cloudinary.com/dckwrqrur/image/upload/v1757205404/tf-stream-url/Screenshot_20250906_202106_Chrome_go9vhu.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "https://res.cloudinary.com/dckwrqrur/image/upload/v1757205404/tf-stream-url/Screenshot_20250906_202106_Chrome_go9vhu.png",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpg",
       "purpose": "maskable"
     }
   ]
